@@ -5,6 +5,8 @@
  - Save a copy step on string fields in `stream_to`.
  - New helper: `pqxx::value_type<CONTAINER>`.
  - New concept: `char_buf`, for a buffer of `char`.
+ - Some escaping functions now have "into my buffer" variants.
+ - More generic binary escaping functions, supporting more types of binary.
 7.5.2
  - **Actual serious bug.**  `blob::read(std::vector<...>)` was broken.
 7.5.1
